After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 655576 - nautilus crashed with SIGABRT in raise()
nautilus crashed with SIGABRT in raise()
Status: RESOLVED FIXED
Product: nautilus
Classification: Core
Component: Crashers
3.2.x
Other Linux
: Normal critical
: ---
Assigned To: Nautilus Maintainers
Nautilus Maintainers
: 655235 665688 (view as bug list)
Depends on:
Blocks:
 
 
Reported: 2011-07-29 12:33 UTC by Pedro Villavicencio
Modified: 2012-02-06 21:22 UTC
See Also:
GNOME target: ---
GNOME version: 3.1/3.2


Attachments
backtrace (28.20 KB, text/plain)
2011-11-07 18:19 UTC, Camille Appert
Details

Description Pedro Villavicencio 2011-07-29 12:33:06 UTC
this report has been filed here:

https://bugs.launchpad.net/ubuntu/+source/nautilus/+bug/817861

"All I did was double click an icon on the desktop. Icon was a symlink to a directory under $HOME. Expected the directory to be presented in a window. Got ABRT instead.

<gauss:~> la ~/Desktop/Link\ to\ src
lrwxrwxrwx 1 kirkwood kirkwood 18 2011-04-04 16:16 /home/kirkwood/Desktop/Link to src -> /home/kirkwood/src/"

backtrace:

.

Comment 1 Camille Appert 2011-11-07 18:19:57 UTC
Created attachment 200905 [details]
backtrace
Comment 2 Camille Appert 2011-11-07 18:20:25 UTC
repro on nautilus 3.2.1-0ubuntu3.
Comment 3 André Klapper 2011-12-07 12:22:15 UTC
*** Bug 665688 has been marked as a duplicate of this bug. ***
Comment 4 Cosimo Cecchi 2012-02-06 21:06:55 UTC
*** Bug 655235 has been marked as a duplicate of this bug. ***
Comment 5 Cosimo Cecchi 2012-02-06 21:22:21 UTC
I pushed a fix for this to git master now, thanks for the report.