window-manage-views: fix a crash when middle-clicking desktop icons

We were hitting an assertion when middle clicking a desktop icon, since
we were trying to open it in a tab (same window), and we don't really
want to do that on the desktop.

https://bugzilla.gnome.org/show_bug.cgi?id=655576